# bobbin

./: .gitignore  .markdownlint-cli2.yaml  .markdownlintignore  .pre-commit-config.yaml  .vale.ini  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Local RAG and Context Injection.md  PRD.md  README.md  VISION.md  bobbin-quipu-mapping.toml  build.rs  cliff.toml  justfile  manifest  release-plz.toml  state.json  tambour.just
eval/: .gitignore  analyze-baselines.py  check-study-progress.sh  pyproject.toml  run-ablation-flask.py  run-ablation-study.sh  run-ablations.sh  run-baseline-study.sh  run-baselines.sh  run-format-comparison.sh  settings-with-bobbin.json  setup-eval.sh  workspace-claude-md.md
eval/analysis/: ablation_analysis.py  controlled_comparison.py  mdbook_pages.py  mpl_charts.py  report.py  svg_charts.py  temporal_curves.py
eval/prompts/: pairwise_judge.md.j2
eval/results/: ablation-flask-search.json  ablation-flask-search.md  ablation-report-final.md  ablation-ruff-search.json  ablation-ruff-search.md  calibration-flask-v2.json  calibration-flask-v2.md  calibration-flask-v3-gpu.json  calibration-flask-v3-gpu.md  calibration-flask-v4-tuned.md  calibration-flask.md  calibration.md  fresh-report.md  interim-ablation-report.md  report.md  temporal-sweep.json
eval/results/runs/20260210-061358-227e/: flask-002_no-bobbin_0.json  flask-002_with-bobbin_0.json  manifest.json
eval/results/runs/20260210-061949-26fb/: flask-003_no-bobbin_0.json  flask-003_with-bobbin_0.json
eval/results/runs/20260210-062428-5d94/: manifest.json
eval/results/runs/20260210-063137-ad56/: flask-005_no-bobbin_0.json  manifest.json
eval/results/runs/20260210-063812-9ec5/: manifest.json  ruff-001_no-bobbin_0.json  ruff-001_with-bobbin_0.json
eval/results/runs/20260210-064835-88d1/: manifest.json  ruff-002_no-bobbin_0.json  ruff-002_with-bobbin_0.json
eval/results/runs/20260210-071955-8be7/: ruff-004_no-bobbin_0.json
eval/results/runs/20260210-073917-1a5d/: manifest.json  ruff-005_no-bobbin_0.json
eval/results/runs/20260210-155659-ee3a/: flask-001_with-bobbin_0.json
eval/results/runs/20260210-155939-41a8/: manifest.json  ruff-001_with-bobbin_0.json
eval/results/runs/20260210-164516-7f81/: flask-001_with-bobbin_0.json  manifest.json
eval/results/runs/20260210-165242-9d61/: manifest.json  ruff-001_with-bobbin_0.json
eval/results/runs/20260210-194843-a327/: manifest.json  ruff-001_no-bobbin_0.json  ruff-001_with-bobbin_0.json
eval/results/runs/20260210-195755-8a72/: manifest.json  ruff-002_no-bobbin_0.json  ruff-002_with-bobbin_0.json
eval/results/runs/20260210-200846-6857/: manifest.json  ruff-003_no-bobbin_0.json  ruff-003_with-bobbin_0.json
eval/results/runs/20260210-202731-03b7/: manifest.json  ruff-004_no-bobbin_0.json  ruff-004_with-bobbin_0.json
eval/results/runs/20260210-204253-0134/: manifest.json  ruff-004_with-bobbin_0.json
eval/results/runs/20260210-204254-ecf9/: manifest.json  ruff-005_no-bobbin_0.json  ruff-005_with-bobbin_0.json
eval/results/runs/20260210-205259-0f6c/: flask-001_no-bobbin_0.json  flask-001_with-bobbin_0.json  manifest.json
eval/results/runs/20260210-205625-bd6c/: flask-002_no-bobbin_0.json  flask-002_with-bobbin_0.json  manifest.json
eval/results/runs/20260210-210529-e76f/: flask-003_no-bobbin_0.json  flask-003_with-bobbin_0.json  manifest.json
eval/results/runs/20260210-211218-ea11/: flask-004_no-bobbin_0.json  flask-004_with-bobbin_0.json  manifest.json
eval/results/runs/20260210-212016-f3e1/: flask-005_no-bobbin_0.json  flask-005_with-bobbin_0.json  manifest.json
eval/results/runs/20260210-235205-a273/: manifest.json  ruff-001_no-bobbin_0.json  ruff-001_with-bobbin_0.json
eval/results/runs/20260210-235243-0f73/: manifest.json  ruff-002_no-bobbin_0.json  ruff-002_with-bobbin_0.json
eval/results/runs/20260211-001710-15e4/: manifest.json  ruff-003_no-bobbin_0.json  ruff-003_with-bobbin_0.json
eval/results/runs/20260211-001827-74b3/: manifest.json  ruff-004_no-bobbin_0.json  ruff-004_with-bobbin_0.json
eval/results/runs/20260211-003931-4a77/: manifest.json  ruff-005_no-bobbin_0.json  ruff-005_with-bobbin_0.json
eval/results/runs/20260211-004616-cbb0/: flask-001_no-bobbin_0.json  flask-001_with-bobbin_0.json  manifest.json
eval/results/runs/20260211-010202-02c0/: flask-002_no-bobbin_0.json  flask-002_with-bobbin_0.json  manifest.json
eval/results/runs/20260211-010215-9998/: flask-003_no-bobbin_0.json  flask-003_with-bobbin_0.json  manifest.json
eval/results/runs/20260211-011919-0903/: flask-005_no-bobbin_0.json  flask-005_with-bobbin_0.json  manifest.json
eval/results/runs/20260211-012015-6da0/: flask-004_no-bobbin_0.json  flask-004_with-bobbin_0.json  manifest.json
eval/runner/: agent_runner.py  bobbin_setup.py  calibrate.py  cli.py  task_loader.py  workspace.py
eval/scorer/: aggregator.py  diff_scorer.py  injection_scorer.py  llm_judge.py  test_scorer.py
eval/scripts/: curate_tasks.py  temporal_sweep.py
eval/tasks/: cargo-001.yaml  cargo-002.yaml  cargo-003.yaml  cargo-004.yaml  cargo-005.yaml  django-001.yaml  django-002.yaml  django-003.yaml  django-004.yaml  django-005.yaml  flask-001.yaml  flask-002.yaml  flask-003.yaml  flask-004.yaml  flask-005.yaml  go-001.yaml  go-002.yaml  go-003.yaml  go-004.yaml  go-005.yaml  nushell-001.yaml  nushell-002.yaml  nushell-003.yaml  nushell-004.yaml  nushell-005.yaml  pandas-001.yaml  pandas-002.yaml  pandas-003.yaml  pandas-004.yaml  pandas-005.yaml  polars-001.yaml  polars-002.yaml  polars-003.yaml  polars-004.yaml  polars-005.yaml  ruff-001.yaml  ruff-002.yaml  ruff-003.yaml  ruff-004.yaml  ruff-005.yaml  (+5 more)
eval/tasks/_quarantined/: README  flask-003.yaml  flask-005.yaml
eval/tests/: test_agent_runner.py  test_aggregator.py  test_bobbin_setup.py  test_cli.py  test_diff_scorer.py  test_injection_scorer.py  test_judge_cli.py  test_llm_judge.py  test_mpl_charts.py  test_report.py  test_run_storage.py  test_task_loader.py  test_test_scorer.py  test_workspace.py
(+519 files in other folders)
