[package]
name = "bobbin"
version = "0.3.1"
edition = "2021"
authors = ["Bobbin Team"]
description = "Local-first context injection engine for AI coding agents"
license = "MIT"
repository = "https://github.com/scbrown/bobbin"
homepage = "https://github.com/scbrown/bobbin"
documentation = "https://docs.rs/bobbin"
readme = "README.md"
keywords = ["rag", "code-search", "embeddings", "tree-sitter"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".beads/",
    ".runtime/",
    ".claude/",
    ".logs/",
    "docs/tasks/",
    "docs/dev-log.md",
    "mail/",
    "state.json",
    "AGENTS.md",
    "GEMINI.md",
    "PRD.md",
    "VISION.md",
    "justfile",
    "Local RAG and Context Injection.md",
]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Markdown parsing
pulldown-cmark = "0.12"

# Tree-sitter parsing
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-cpp = "0.23"

# Vector database (primary storage)
lancedb = "0.17"
lance-index = "0.23"
arrow = { version = "53", default-features = false }
arrow-array = "53"
arrow-schema = "53"

# SQLite (coupling + meta only)
rusqlite = { version = "0.33", features = ["bundled"] }

# MySQL/Dolt (beads integration)
mysql_async = { version = "0.34", default-features = false, features = ["default-rustls"] }

# ONNX runtime for embeddings
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "load-dynamic"] }
ndarray = "0.17"
tokenizers = "0.21"

# Error handling
anyhow = "1"
thiserror = "2"

# HTTP client for model downloads
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Utilities
walkdir = "2"
ignore = "0.4"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
colored = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6"
sha2 = "0.10"
notify = "6"
hex = "0.4"
glob = "0.3"

# MCP Server
rmcp = { version = "0.12", features = ["server", "transport-io", "transport-streamable-http-server", "axum"] }
schemars = "1.0"

# Knowledge graph (Quipu subsystem)
quipu = { git = "https://github.com/scbrown/quipu", branch = "main", default-features = false, optional = true }

# HTTP Server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
urlencoding = "2"

[features]
knowledge = ["dep:quipu"]

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[lints.clippy]
cast_sign_loss = "warn"
checked_conversions = "warn"
cloned_instead_of_copied = "warn"
doc_markdown = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
fn_params_excessive_bools = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
manual_let_else = "warn"
map_unwrap_or = "warn"
match_wildcard_for_single_variants = "warn"
needless_continue = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
string_add_assign = "warn"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"

[[bin]]
name = "bobbin"
path = "src/main.rs"
