[package]
name = "bobbin"
# publish restriction lives in release-plz.toml [workspace] (publish = false),
# NOT here in the manifest. A manifest-level `publish = false` excludes the
# package from release-plz's release-PR processing entirely — release-plz.toml
# `release = true` re-includes it only for the tag/release step, not the
# version-bump PR — so release-plz answered "nothing to release" over real
# feats and every version was hand-cut. quipu (whose release-plz works)
# controls publish from release-plz.toml alone with no manifest guard; this
# matches that proven shape. Safe: the crates.io `bobbin` name is owned by an
# unrelated party, so an accidental `cargo publish` errors on ownership rather
# than leaking anything.
version = "0.6.4"
edition = "2021"
authors = ["Bobbin Team"]
description = "Local-first context injection engine for AI coding agents"
license = "MIT"
repository = "https://github.com/scbrown/bobbin"
homepage = "https://github.com/scbrown/bobbin"
documentation = "https://docs.rs/bobbin"
readme = "README.md"
keywords = ["rag", "code-search", "embeddings", "tree-sitter"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".beads/",
    ".runtime/",
    ".claude/",
    ".logs/",
    "docs/tasks/",
    "docs/dev-log.md",
    "mail/",
    "state.json",
    "AGENTS.md",
    "GEMINI.md",
    "PRD.md",
    "VISION.md",
    "justfile",
    "Local RAG and Context Injection.md",
]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Markdown parsing
pulldown-cmark = "0.12"

# Tree-sitter parsing
async-trait = "0.1"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-cpp = "0.23"

# Vector database (primary storage)
lancedb = "0.17"
lance-index = "0.23"
# Cross-process advisory lock for lance maintenance (compact/prune) — already
# in the tree transitively; promoted so the maintenance gate can flock.
fs4 = "0.8"
arrow = { version = "53", default-features = false }
arrow-array = "53"
arrow-schema = "53"

# SQLite (coupling + meta only)
rusqlite = { version = "0.33", features = ["bundled"] }

# MySQL/Dolt (beads integration)
mysql_async = { version = "0.34", default-features = false, features = ["default-rustls"] }

# ONNX runtime for embeddings
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "load-dynamic"] }
ndarray = "0.17"
tokenizers = "0.21"

# Error handling
anyhow = "1"
thiserror = "2"

# HTTP client for model downloads
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Utilities
walkdir = "2"
ignore = "0.4"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
colored = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6"
sha2 = "0.10"
notify = "6"
hex = "0.4"
glob = "0.3"

# MCP Server
rmcp = { version = "0.12", features = ["server", "transport-io", "transport-streamable-http-server", "axum"] }
schemars = "1.0"

# Knowledge graph (Quipu subsystem)
#
# rev = 7f984b4e is quipu 0.2.0 and is CHOSEN, not inherited. It is 33 commits behind
# main (dc1724e, 0.3.3) — a full minor release behind what the fleet runs — because
# 0.2.0 is the NEWEST rev bobbin actually compiles against. 0.3.3 changed the signature
# to `tool_project(store: &mut Store, ..)`; bobbin passes `&Store` from an immutable
# borrow (src/search/ppr.rs:68, reached via &self in the assembler), so upgrading is a
# real migration, not a version bump. Tracked in bobbin-kue26 — do not bump this rev without
# doing that work; `cargo check --features knowledge` fails immediately if you try.
#
# Pinned by rev rather than `branch = "main"` because Cargo.lock is gitignored: a fresh
# CI checkout has no lock, so a branch dep would float to main's tip. With `knowledge`
# now built by CI (bobbin-jdlkh), that float would have broken the build on the very
# first run — the API drift above was invisible only because the feature was never
# compiled.
#
# `default-features = false` keeps quipu's `onnx` + `shacl` off — verified via
# `cargo tree -i ort`: only bobbin pulls ort/tokenizers, quipu does not, so quipu's
# embedder (and its pad-token bug) is not compiled in.
quipu = { git = "https://github.com/scbrown/quipu", rev = "7f984b4e", default-features = false, optional = true }

# HTTP Server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
urlencoding = "2"
pdf-extract = "0.12"

[features]
knowledge = ["dep:quipu"]

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "bobbin"
path = "src/main.rs"
